# xo-admin

./: .gitignore  README.md  dump.txt  pyproject.toml
.github/workflows/: cd.yml  ci.yml  pypi-test.yml  release.yml  unit-tests.yml
example/: apply.yaml
scripts/: test_add_host.py  xoa_init.py
src/xoadmin/: __main__.py  api.py  host.py  manager.py  storage.py  user.py  utils.py  vm.py  websocket.py
src/xoadmin/api/: api.py  manager.py  user.py  vm.py
src/xoadmin/cli/: apply.py  auth.py  cli.py  config.py  hosts.py  model.py  storage.py  users.py  utils.py  vms.py
src/xoadmin/configurator/: config.py  configurator.py
tests/: test_xoadmin.py  test_xoapi.py
