[tool.poetry]
name = "xoadmin"
version = "0.1.0"
description = "bindings and wrappers to manage an XOA instance"
authors = ["dennis"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.3"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
httpx = "^0.27.0"
colorlog = "^6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
